# chatRoom

./: CMakeLists.txt
ClientApp/python/: chat_gui.py
SocketClient/: main.c
SocketServer/: main.c
SocketUtil/: socket_utils.c  socket_utils.h
